# meson_gtest_tamplate

./: README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
src/: meson.build
test/: meson.build  test_hello.cpp
